# koten

./: .env.example  .gitignore  README.md  SYMBOL_CONFIG_GUIDE.md  pyproject.toml  requirements.txt  run.sh
data/: koten.sqlite3
docs/: accesos-roles.md  api.md  architecture.md  database.md  frontend.md  ia-lexico.md  images.md  koten.md  symbols-config.md  tokenizer-renderizado-simbolos.md
lore/: geografia.md  idiomas.md  koten.md  razas.md  secreto.md
lore/info/: dinero.md  geografia.md  historias.md  info.md  sistemas-numericos.md  unidades.md
lore/lang/: dekayun.md  gornach-kagsha.md  gornash-kagsha.md  goxjix.md  idoling.md  jobide.md  lang.md  lapag.md  negelch.md  negelsh.md
lore/races/: README.md  alish.md  denjom.md  drayim.md  elemir.md  gomur.md  kalchad.md  kalosh.md  klof.md  krom.md  marog.md  mugot.md  nekles.md  nerum.md  perim.md  races.md  shotur.md  sotif.md  tofa.md  torka.md  ujom.md  yodki.md
lore/rules/: accesos-roles.md  acciones.md  daño.md  defensa.md  elementos-universales.md  magia.md  master.md  personajes.md  puntos-destino.md  rasgos-niveles.md  rules.md  tiradas.md
scripts/: check_md_health.py  process_images.py  render_language_equivalence_table.py  seed_languages.py  test_symbols.py
src/koten/: __init__.py  main.py
src/koten/api/: __init__.py  images.py  lexicon.py  lore.py  router.py  symbols.py
src/koten/core/: __init__.py  config.py
src/koten/db/: __init__.py  connection.py  init_db.py  schema.py
tests/: test_health.py  test_lexicon_equivalents.py  test_lore_rendering.py  test_symbol_tokenizers.py
(+17 files in other folders)
